--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -15,6 +15,8 @@ body {
     padding: 20px;
     height: 100vh;
     box-sizing: border-box;
+    position: static;
+    z-index: auto;
 }
 
 .products-section {
@@ -50,6 +52,8 @@ body {
     display: flex;
     flex-direction: column;
     gap: 20px;
+    position: static;
+    z-index: auto;
 }
 
 .search-section, .cart-section {
@@ -139,9 +143,13 @@ button:hover {
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0,0.5);
-    z-index: 1000;
+    z-index: 9999; /* Aumentar z-index */
+    justify-content: center;
+    align-items: flex-start;
+    padding-top: 50px;
     overflow: auto;
 }
+
 
 .modal-content {
     position: relative;
